--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,74 @@
-loguru
-mkdocs
-pip
-pytest
-ruff
-python-dotenv
-tqdm
-typer
--e .
-pandas
-numpy
-matplotlib
-seaborn
-scikit-learn
-pickle5
+appnope==0.1.4
+asttokens==3.0.0
+click==8.1.8
+comm==0.2.2
+contourpy==1.3.1
+cycler==0.12.1
+-e git+https://github.com/EduardoHalmen/darwin-analysis@e258981ab782d6864034eea69cd1f67bb49c3205#egg=darwin
+debugpy==1.8.13
+decorator==5.2.1
+exceptiongroup==1.2.2
+executing==2.2.0
+fonttools==4.56.0
+ghp-import==2.1.0
+iniconfig==2.1.0
+ipykernel==6.29.5
+ipython==8.34.0
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.4.2
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+kiwisolver==1.4.8
+loguru==0.7.3
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.1
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mergedeep==1.3.4
+mkdocs==1.6.1
+mkdocs-get-deps==0.2.0
+nest-asyncio==1.6.0
+numpy==2.2.4
+packaging==24.2
+pandas==2.2.3
+parso==0.8.4
+pathspec==0.12.1
+pexpect==4.9.0
+pickle5==0.0.11
+pillow==11.1.0
+platformdirs==4.3.7
+pluggy==1.5.0
+prompt_toolkit==3.0.50
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.19.1
+pyparsing==3.2.3
+pytest==8.3.5
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytz==2025.2
+PyYAML==6.0.2
+pyyaml_env_tag==0.1
+pyzmq==26.3.0
+rich==13.9.4
+ruff==0.11.2
+scikit-learn==1.6.1
+scipy==1.15.2
+seaborn==0.13.2
+shellingham==1.5.4
+six==1.17.0
+stack-data==0.6.3
+threadpoolctl==3.6.0
+tomli==2.2.1
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+typer==0.15.2
+typing_extensions==4.13.0
+tzdata==2025.2
+watchdog==6.0.0
+wcwidth==0.2.13
