--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ click==8.1.8
 comm==0.2.2
 contourpy==1.3.1
 cycler==0.12.1
--e git+https://github.com/EduardoHalmen/darwin-analysis@e258981ab782d6864034eea69cd1f67bb49c3205#egg=darwin
+#-e git+https://github.com/EduardoHalmen/darwin-analysis@e258981ab782d6864034eea69cd1f67bb49c3205#egg=darwin
+-e .
 debugpy==1.8.13
 decorator==5.2.1
 exceptiongroup==1.2.2
